--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     },
     "dependencies": {
       "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.16.0",
-      "aurelia-framework": "github:aurelia/framework@^0.15.0"
+      "aurelia-framework": "github:aurelia/framework@^0.15.0",
+      "aurelia-http-client": "github:aurelia/http-client@^0.10.3",
+      "bootstrap": "github:twbs/bootstrap@^3.3.5"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
