--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "lodash": "^3.10.1"
   },
   "jspm": {
     "directories": {
@@ -19,7 +20,8 @@
       "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.16.0",
       "aurelia-framework": "github:aurelia/framework@^0.15.0",
       "aurelia-http-client": "github:aurelia/http-client@^0.10.3",
-      "bootstrap": "github:twbs/bootstrap@^3.3.5"
+      "bootstrap": "github:twbs/bootstrap@^3.3.5",
+      "font-awesome": "npm:font-awesome@^4.4.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
