--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "lodash": "^3.10.1"
   },
@@ -20,6 +21,7 @@
       "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.16.0",
       "aurelia-framework": "github:aurelia/framework@^0.15.0",
       "aurelia-http-client": "github:aurelia/http-client@^0.10.3",
+      "aurelia-validation": "github:aurelia/validation@^0.2.8",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "font-awesome": "npm:font-awesome@^4.4.0"
     },
